# cmake-training

./: README.rst  readme.md
cmake-docker-environment/: Dockerfile  docker-compose.yml
cmake-docker-environment/demos/target-compile/: CMakeLists.txt  README.md  main.cpp
cmake-docker-environment/labs/cmake-example/: CMakeLists.txt  readme.md
cmake-docker-environment/labs/consume-shared-library/: CMakeLists.txt  readme.md
cmake-docker-environment/labs/consume-static-library/: CMakeLists.txt  main.cpp  readme.md
cmake-docker-environment/labs/generate-library/: readme.md
cmake-docker-environment/labs/make-example/: Makefile  readme.md
cmake-docker-environment/labs/ninja-example/: CMakeLists.txt  greeting.cpp  main.cpp  readme.md
cmake-docker-environment/labs/subdirectory-example/: CMakeLists.txt  main.cpp  readme.md
cmake-docker-environment/labs/subdirectory-example/firstDay/: CMakeLists.txt
cmake-docker-environment/labs/subdirectory-example/secondDay/: CMakeLists.txt
cmake-docker-environment/labs/targets-example/: CMakeLists.txt  main.cpp  readme.md
cmake-docker-environment/labs/targets-example/firstDay/: firstDay.cpp
cmake-docker-environment/labs/targets-example/firstDay/include/: firstDay.h
cmake-docker-environment/labs/targets-example/secondDay/: secondDay.cpp
cmake-docker-environment/labs/targets-example/secondDay/include/: secondDay.h
cmake-docker-environment/labs/targets-example/thirdDay/: thirdDay.cpp
cmake-docker-environment/labs/targets-example/thirdDay/include/: thirdDay.h
(+2 files in other folders)
